Add link to GitHub Issues in popup

--- a/app/popup.html
+++ b/app/popup.html
@@ -11,7 +11,15 @@
     <!-- endbuild -->
   </head>
   <body>
-    <h1>'Allo, 'Allo!</h1>
+    <div class="container">
+      <h1>Stack Block</h1>
+
+      <p>
+        <a href="https://github.com/jeffcole/stack-block/issues"
+           target="_blank">Click here</a>
+        to report any problems you encounter with this extension. Thanks!
+      </p>
+    </div>
 
     <!-- build:js scripts/popup-vendor.js -->
     <!-- bower:js -->
